--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 body {
     background-color: #FAA7A7;
     margin: 0;
+    min-height: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .card {
@@ -9,9 +13,11 @@ body {
     border-radius: 16px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-content: center;
+    align-items: flex-start;
     flex-wrap: wrap;
     padding: 32px;
+    gap: 24px;
 
 }
 
@@ -48,5 +54,3 @@ body {
     gap: 24px;
     margin: 0;
 }
-
-
