--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
 
 .card {
     max-width: 625px;
-    background-color: #F8F8F8;
+    background-color: #f3f192;
+background-image: linear-gradient(45deg, #f3f192 19%, #f385ff 95%);
     border-radius: 16px;
     display: flex;
     justify-content: center;
