--- a/style.css
+++ b/style.css
@@ -30,16 +30,18 @@ body {
     margin: 0;
 }
 
-.card__description--link {
-    color: #E50A9B;
-    text-decoration: none;
-}
+
 
 .card__header {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 36px;
     font-weight: 400;
     margin: 0;
+}
+
+.card__link {
+    color: #E50A9B;
+    text-decoration: none;
 }
 
 .card__photo {
