--- a/style.css
+++ b/style.css
@@ -63,3 +63,21 @@ body {
     gap: 24px;
     margin: 0;
 }
+
+@keyframes span {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(0.7);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+.span {
+    animation: span 4s infinite alternate;
+    display: inline-block;
+    font-size: 2rem;
+}
